removed scrollbar in pages, fixed opacity animation on Section

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+    display: none;
+}
+
 .page-container {
     margin: 5rem 0rem 0rem 0rem
 }
